--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "better-sqlite3": "^11.1.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
